# numberformat

./: LICENSE  README.md  numberformat.cabal
src/HumanFriendly/: NumberFormat.hsc
