name:                numberformat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zasimov/numberformat#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Zasimov
maintainer:          zasimov@gmail.com
copyright:           2017 Alexey Zasimov
category:            System
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     HumanFriendly.NumberFormat
  hs-source-dirs:      src
  other-extensions:    ForeignFunctionInterface
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  build-tools:         hsc2hs